# c-laboratory

./: .gitignore
1/: CMakeLists.txt  main.c
1/helpers/: ConsoleHelpers.c  Helpers.c  Helpers.h
1/menu/: Menu.c
1/tasks/: Task1.c  Task1.h  Task2.c  Task2.h
2/: CMakeLists.txt  main.c
2/helpers/: Helpers.c  Helpers.h
2/tasks/: Task1.c  Task1.h  Task2.c  Task2.h
3/: CMakeLists.txt  main.c
3/helpers/: ArrayHelpers.c  ArrayHelpers.h  Helpers.h
3/menu/: Menu.h
3/tasks/: Task1.c  Task1.h
4/: CMakeLists.txt  main.c
4/helpers/: Helpers.c  Helpers.h
4/tasks/: Task1.c  Task1.h  Task2.c  Task2.h
5/: CMakeLists.txt  main.c
5/helpers/: Helpers.c  Helpers.h
5/tasks/: Task1.c  Task1.h
6/: CMakeLists.txt  main.c
6/helpers/: ArrayHelpers.c  ConsoleHelpers.c
6/menu/: Menu.c
6/tasks/: Task1.c  Task1.h
7/: CMakeLists.txt  main.c
7/Helpers/: ConsoleHelpers.c  ConsoleHelpers.h  Helpers.c  Helpers.h
7/LinkedList/: LinkeListFuncsForLab.c  LinkeListFuncsForLab.h  LinkedList.c  LinkedList.h
7/Menu/: Menu.c
7/Tasks/: Task1.c  Task1.h  Task2.c  Task2.h  TaskWorkingWithLinkedList.c  TaskWorkingWithLinkedList.h
7/Train/: Train.c  Train.h
7/helpers/: Helpers.c  Helpers.h
8/: CMakeLists.txt  main.c
8/file_system/: file_system.c  file_system.h  file_system_structs.c  file_system_structs.h  file_sysytem_structs.c  file_sysytem_structs.h
8/helpers/: helpers.c  helpers.h  utils.c  utils.h
8/humans/: humans.c  humans.h
8/linked_list/: linked_list.c  linked_list.h
8/tasks/: task_1.c  task_1.h  task_2.c  task_2.h
